--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,7 +12,7 @@
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"ui5.mobile.app.ui5-mobile-app": "./"}'>
+			data-sap-ui-resourceroots='{"ui5.mobile.app": "./"}'>
 		</script>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,7 +22,7 @@
 				new sap.m.Shell({
 					app: new sap.ui.core.ComponentContainer({
 						height : "100%",
-						name : "ui5.mobile.app.ui5-mobile-app"
+						name : "ui5.mobile.app"
 					})
 				}).placeAt("content");
 			});
