--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,7 @@
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-preload="async"
+			data-sap-ui-bindingSyntax="complex"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-resourceroots='{"ui5.mobile.app": "./"}'>
